--- a/templates/task_list.html
+++ b/templates/task_list.html
@@ -9,7 +9,7 @@
       <span class="date">{{ task.createtime.strftime("%Y-%m-%d") }}</span>
   </div>
   <div class="clearfix"></div>
-  <div class="ext-info hidden">
+  <div class="ext-info" style="display: none;">
       <span class="uploader">UP主: {{ email2name(task.creator) or task.creator or "unknow" }}</span>
       
       <span class="tags">TAGS: {% raw modules.TagsModule(task.tags) %}</span>
