--- a/templates/share.html
+++ b/templates/share.html
@@ -118,6 +118,18 @@
     $("#share-links").hide();
   });
 
+  var alpha = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
+  function escape_command(str) {
+    var result = "";
+    for (var i = 0; i < str.length; i++) {
+      if (alpha.indexOf(str[i]) == -1)
+        result += "\\"+str[i];
+      else
+        result += str[i];
+    }
+    return result;
+  }
+
   function get_links() {
     var result = [];
     $.each($("a.file-title"), function(i, n) {
@@ -143,7 +155,7 @@
     var str = "";
     var cookie = get_cookie();
     $.each(get_links(), function(i, n) {
-      str += "wget -c -O '"+n.title+"' --header 'Cookie:"+cookie+";' '"+n.url+"'\n";
+      str += "wget -c -O "+escape_command(n.title)+" --header 'Cookie:"+cookie+";' '"+n.url+"'\n";
     });
     $("#link-text").text(str);
   }
@@ -152,7 +164,7 @@
     var str = "";
     var cookie = get_cookie();
     $.each(get_links(), function(i, n) {
-      str += "aria2c -c -x5 --out '"+n.title+"' --header 'Cookie:"+cookie+";' '"+n.url+"'\n";
+      str += "aria2c -c -x5 --out "+escape_command(n.title)+" --header 'Cookie:"+cookie+";' '"+n.url+"'\n";
     });
     $("#link-text").text(str);
   }
