--- a/templates/lixian.html
+++ b/templates/lixian.html
@@ -17,29 +17,31 @@
   <div class="task-info">
     <div class="task-name">{{ task.taskname }}</div>
     {% if task.status == "finished" %}
-    <div id="share-botton" class="task-botton">
+    <div id="share-button" class="task-button">
       <a href="/share/{{ task.id }}" target="_blank"><div>分享</div></a>
       <div id="share-links" class="more-links" style="display: none;">
-        <a href="javascript:share_google();" title="分享到 Google+"><div class="task-botton">Google+</div></a>
-        <a href="javascript:share_twitter();" title="分享到 Twitter+"><div class="task-botton">Twitter</div></a>
-        <a href="javascript:share_sina();" title="分享到 新浪微博"><div class="task-botton">新浪微博</div></a>
-        <a href="javascript:share_qq();" title="分享到 腾讯微博"><div class="task-botton">腾讯微博</div></a>
-        <a href="javascript:share_douban();" title="分享到 豆瓣"><div class="task-botton">豆瓣</div></a>
+        <a href="javascript:share_google();" title="分享到 Google+"><div class="task-button">Google+</div></a>
+        <a href="javascript:share_twitter();" title="分享到 Twitter+"><div class="task-button">Twitter</div></a>
+        <a href="javascript:share_sina();" title="分享到 新浪微博"><div class="task-button">新浪微博</div></a>
+        <a href="javascript:share_qq();" title="分享到 腾讯微博"><div class="task-button">腾讯微博</div></a>
+        <a href="javascript:share_douban();" title="分享到 豆瓣"><div class="task-button">豆瓣</div></a>
       </div>
     </div>
-    <div id="batch-botton" class="task-botton">
+    <div id="batch-button" class="task-button">
       <div>批量下载</div>
       <div id="batch-links" class="more-links" style="display: none;">
-        <!--<a href="#" onclick="copy_links(); return false;"><div class="task-botton">copy</div></a>-->
-        <a href="#" onclick="wget_links(); return false"><div class="task-botton">wget</div></a>
-        <a href="#" onclick="aria2_links(); return false"><div class="task-botton">aria2 x5</div></a>
-        <a href="/export/{{ url_escape(options.site_name) }}_idm_{{ task.id }}_{{ url_escape(task.taskname.replace(" ", "_")) }}.ef2"><div class="task-botton">IDM 导出</div></a>
+        <!--<a href="#" onclick="copy_links(); return false;"><div class="task-button">copy</div></a>-->
+        <a href="#" onclick="wget_links(); return false"><div class="task-button">wget</div></a>
+        <a href="#" onclick="aria2_links(); return false"><div class="task-button">aria2 x5</div></a>
+        <a href="/export/{{ url_escape(options.site_name) }}_idm_{{ task.id }}_{{ url_escape(task.taskname.replace(" ", "_")) }}.ef2"><div class="task-button">IDM 导出</div></a>
       </div>
     </div>
     {% else %}
-    <a href="/share/{{ task.id }}" target="_blank">
-      <div class="task-botton {{ task.status }}">{{ format_status(task.status) }}</div>
-    </a>
+    <div class="task-button">
+      <a href="/share/{{ task.id }}" target="_blank">
+        <div class="{{ task.status }}">{{ format_status(task.status) }}</div>
+      </a>
+    </div>
     {% end %}
     <div class="clearfix"></div>
   </div>
@@ -79,13 +81,13 @@
 
 {% block foot %}
 <script>
-  $("#batch-botton").hover(function() {
+  $("#batch-button").hover(function() {
     $("#batch-links").show();
   }, function() {
     $("#batch-links").hide();
   });
 
-  $("#share-botton").hover(function() {
+  $("#share-button").hover(function() {
     $("#share-links").show();
   }, function() {
     $("#share-links").hide();
