--- a/templates/share.html
+++ b/templates/share.html
@@ -27,23 +27,23 @@
         <span class="file-size">{{ format_size(task.size) }}</span>
     </div>
   <div class="ext-info">
-    <div id="share-botton" class="task-botton">
+    <div id="share-button" class="task-button">
       <a href="/share/{{ task.id }}" target="_blank"><div>分享</div></a>
       <div id="share-links" class="more-links" style="display: none;">
-        <a href="javascript:share_google();" title="分享到 Google+"><div class="task-botton">Google+</div></a>
-        <a href="javascript:share_twitter();" title="分享到 Twitter+"><div class="task-botton">Twitter</div></a>
-        <a href="javascript:share_sina();" title="分享到 新浪微博"><div class="task-botton">新浪微博</div></a>
-        <a href="javascript:share_qq();" title="分享到 腾讯微博"><div class="task-botton">腾讯微博</div></a>
-        <a href="javascript:share_douban();" title="分享到 豆瓣"><div class="task-botton">豆瓣</div></a>
+        <a href="javascript:share_google();" title="分享到 Google+"><div class="task-button">Google+</div></a>
+        <a href="javascript:share_twitter();" title="分享到 Twitter+"><div class="task-button">Twitter</div></a>
+        <a href="javascript:share_sina();" title="分享到 新浪微博"><div class="task-button">新浪微博</div></a>
+        <a href="javascript:share_qq();" title="分享到 腾讯微博"><div class="task-button">腾讯微博</div></a>
+        <a href="javascript:share_douban();" title="分享到 豆瓣"><div class="task-button">豆瓣</div></a>
       </div>
     </div>
-    <div id="batch-botton" class="task-botton">
+    <div id="batch-button" class="task-button">
       <div>批量下载</div>
       <div id="batch-links" class="more-links" style="display: none;">
-        <!--<a href="#" onclick="copy_links(); return false;"><div class="task-botton">copy</div></a>-->
-        <a href="#link-text" id="wget-botton"><div class="task-botton">wget</div></a>
-        <a href="#link-text" id="aria2-botton"><div class="task-botton">aria2 x5</div></a>
-        <a href="/export/{{ url_escape(options.site_name) }}_idm_{{ task.id }}_{{ url_escape(task.taskname.replace(" ", "_")) }}.ef2"><div class="task-botton">IDM 导出</div></a>
+        <!--<a href="#" onclick="copy_links(); return false;"><div class="task-button">copy</div></a>-->
+        <a href="#link-text" id="wget-button"><div class="task-button">wget</div></a>
+        <a href="#link-text" id="aria2-button"><div class="task-button">aria2 x5</div></a>
+        <a href="/export/{{ url_escape(options.site_name) }}_idm_{{ task.id }}_{{ url_escape(task.taskname.replace(" ", "_")) }}.ef2"><div class="task-button">IDM 导出</div></a>
       </div>
     </div>
       <span class="uploader">UP主: {{ email2name(task.creator) or task.creator or "unknow" }}</span>
@@ -106,13 +106,13 @@
   OnResize();
   window.onresize = OnResize;
 
-  $("#batch-botton").hover(function() {
+  $("#batch-button").hover(function() {
     $("#batch-links").show();
   }, function() {
     $("#batch-links").hide();
   });
 
-  $("#share-botton").hover(function() {
+  $("#share-button").hover(function() {
     $("#share-links").show();
   }, function() {
     $("#share-links").hide();
@@ -191,8 +191,8 @@
     window.open("http://www.douban.com/recommend/?url="+share_url+"&title="+share_title,"","width="+w+",height="+h+",left="+x+",top="+y+",scrollbars=no");
   }
 
-  $("#wget-botton").fancybox({onStart: wget_links});  
-  $("#aria2-botton").fancybox({onStart: aria2_links});  
+  $("#wget-button").fancybox({onStart: wget_links});  
+  $("#aria2-button").fancybox({onStart: aria2_links});  
   $("#disable-helper").fancybox();
   {% if handler.disabled_userjs() %}
   $("a.file-title").click(function() {
