add sitemap and robots.txt

--- a/templates/lixian.html
+++ b/templates/lixian.html
@@ -4,6 +4,7 @@
 {% block desc %}{{ task.taskname }}{% end %}
 
 {% block head %}
+<meta name="robots" content="noindex" />
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script> !window.jQuery && document.write('<script src=\"{{static_url("js/jquery-1.4.3.min.js")}}\"><\/script>'); </script>
 <script type="text/javascript" src="{{static_url('js/fancybox/jquery.fancybox-1.3.4.pack.js')}}"></script>
