fix bugs and add uploader

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>{% block title %}迅雷离线下载分享 - {{ options.site_name }}{% end %}</title>
+<title>{% block title %}{{ options.site_name }} - 迅雷离线下载分享{% end %}</title>
 <!--[if IE]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
