--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,11 @@
 <link rel="stylesheet" href="{{static_url('css/reset.css')}}" type="text/css" />
 <link rel="stylesheet" href="{{static_url('css/base.css')}}" type="text/css" />
 {% block head %}{% end %}
+<meta name="keywords" content="迅雷 迅雷离线 ACG  资源分享 下载" />
+<meta name="description" content="{% block desc %}{{ options.site_name }} - 基于迅雷离线服务的ACG资源分享/下载网站{% end %}" />
+</head>
+<body>
+{% block body %}{% end %}
 {% if options.ga_account %}
 <script type="text/javascript">
 
@@ -24,10 +29,6 @@
 
 </script>
 {% end %}
-<meta name="description" content="{% block desc %}{{ options.site_name }} - 基于迅雷离线服务的ACG资源分享/下载网站{% end %}" />
-</head>
-<body>
-{% block body %}{% end %}
 </body>
 {% block foot %}{% end %}
 </html>
