--- a/templates/front.html
+++ b/templates/front.html
@@ -5,8 +5,8 @@
 <script> !window.jQuery && document.write('<script src=\"{{static_url("js/jquery-1.4.3.min.js")}}\"><\/script>'); </script>
 <script type="text/javascript" src="{{static_url('js/fancybox/jquery.fancybox-1.3.4.pack.js')}}"></script>
 <link rel="stylesheet" href="{{static_url('js/fancybox/jquery.fancybox-1.3.4.css')}}" type="text/css" media="screen" />
-<link rel="alternate" type="application/atom+xml" href="?feed=rss" />
 <script>if ($.browser.msie && parseInt($.browser.version) <= 7){ location = "{{ static_url('no-ie.html') }}" }</script>
+{% block more_head %}{% end %}
 {% end %}
 
 {% block body %}
@@ -22,7 +22,7 @@
         </div>
       </form>
     </div>
-    <nav id="top-right">
+    <div id="top-right">
     <ul class="menu">
       {% if current_user %}
       <li><a href="/uploader/{{ current_user['id'] }}">{{ current_user['name'] }}</a></li>
@@ -33,7 +33,7 @@
       <li class="last"><a href="/login">登录</a></li>
       {% end %}
     </ul>
-    </nav>
+    </div>
   </div>
   <div id="layout-background">
     <div class="logo">
