--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -1,96 +1,9 @@
 {% extends base.html %}
 
 {% block head %}
+<link rel="stylesheet" href="{{static_url('css/add_task.css')}}" type="text/css" media="screen" />
 <style>
-body {
-	font-family: "Helvetica Neue", "Luxi Sans", "DejaVu Sans", Tahoma, "Hiragino Sans GB", STHeiti, "Microsoft YaHei" !important;
-	font-size:13px;
-  overflow: hidden;
-}
-#addtask_head {
-	width:100%;
-	overflow:hidden;
-	font-size:16px;
-}
-#addtask_head img {
-    float:left;
-    width: 100px;
-    height: 32px;
-    overflow: hidden;
-    margin:4px 0 0 30px;
-}
 #addtask_head #message { float: left; margin: 7px 0 0 50px; padding: 0 5px; background-color: #ffc4c4; font-size: 13px; line-height: 23px; }
-#addtask_main {
-
-}
-.addtask_form {
-
-}
-.addtask_up {
-	margin:5px 0 3px 10px;
-	display:block;
-	overflow:hidden;
-	width:700px;
-	padding:10px 0 10px 0;
-}
-.l {
-	width: 150px;
-	text-align:right;
-	float:left;
-  line-height: 28px;
-}
-.addtask_up span {
-	 margin-right:10px;
-	 color: #999;
-}
-.r {
-	float:right;
-	width:540px;
-}
-input[type="text"] {
-	border: solid 1px #999;
-	background: -webkit-gradient(linear,left top,left 15,from(white),color-stop(4%,#F9F9F9),to(white));
-	background: -moz-linear-gradient(top,white,#F9F9F9 1px,white 15px);
-	padding: 4px;
-	font-size: 12px;
-  height: 18px;
-}
-input, textarea {
-	border: 1px solid #CCC;
-	background: -webkit-gradient(linear,left top,left 15,from(white),color-stop(4%,#F9F9F9),to(white));
-	background: -moz-linear-gradient(top,white,#F9F9F9 1px,white 15px);
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-}
-.addtask_button {
-  clear: both;
-  float: right;
-  margin: 10px 120px 0 0;
-}
-.button {
-  padding: 2px 7px;
-  margin-left: 10px;
-	border-radius: 4px;
-	color: #606060;
-	border: solid 1px #B7B7B7;
-	background: white;
-	background: -webkit-gradient(linear,left top,left bottom,from(white),to(#EDEDED));
-	background: -moz-linear-gradient(top,white,#EDEDED);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='white',endColorstr='#EDEDED');
-}
-.button:hover {
-	background:#ededed;
-	background:-webkit-gradient(linear,left top,left bottom,from(#fff),to(#dcdcdc));
-	background:-moz-linear-gradient(top,#fff,#dcdcdc);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff',endColorstr='#dcdcdc')
-}
-.button:active {
-	color: #999;
-	background: -webkit-gradient(linear,left top,left bottom,from(#EDEDED),to(white));
-	background: -moz-linear-gradient(top,#EDEDED,white);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#EDEDED',endColorstr='white');
-}
 </style>
 {% end %}
 
@@ -104,11 +17,17 @@ input, textarea {
   <span id="message">{{ message }}</span>
 </div>
 <div id="addtask_main">
-<form class="addtask_form" method="post" onsubmit="return on_submit();">
+<form class="addtask_form" method="post" enctype="multipart/form-data" onsubmit="return on_submit();">
 	<div class="addtask_up">
 	<div class="l">任务下载地址</div>
 	<div class="r">
-		<input type="text" name="url" id="task_url" value="" style="width:300px;" />
+        <input type="text" name="url" id="task_url" value="" style="width:230px;border-right:none;" onkeyup="on_url_change();" onPaste="on_url_change();" />
+        <div class="bt_file">
+          <input type="file" name="btfile" class="file" onchange="on_file_change();" />
+          <div class="fake_button">
+            <button class="button file_button" id="bt_button">种子上传</button>
+          </div>
+        </div>
 		<span>(必填)</span>
 	</div>
 	</div>
@@ -145,7 +64,7 @@ input, textarea {
 <script>
 function on_submit() {
   var form = document.forms[0];
-  if (form.url.value == "") {
+  if (form.url.value == "" && from.btfile.value == "") {
     document.getElementById("message").innerText = "任务下载地址不能为空";
     return false;
   }
@@ -155,6 +74,28 @@ function on_submit() {
   form.url.readOnly = true;
   form.title.readOnly = true;
   return true;
+}
+
+function on_url_change() {
+  var form = document.forms[0];
+  var url = form.url;
+  if (url.value != "" && (url.class == "" || url.class == undefined)) {
+    url.class = "changed";
+    url.style.cssText = "width: 300px; -moz-border-radius: 5px; border-radius: 5px; -webkit-border-radius: 5px;";
+    document.getElementsByClassName("bt_file")[0].style.cssText = "width:0;";
+  } else if (url.value == "") {
+    url.class = "";
+    url.style.cssText = "width: 230px;border-right:none;";
+    document.getElementsByClassName("bt_file")[0].style.cssText = "";
+  }
+}
+
+function on_file_change() {
+  var form = document.forms[0];
+  var url = form.url;
+  url.value = form.btfile.value;
+  url.disabled = true;
+  url.readOnly = true;
 }
 </script>
 {% end %}
