--- a/templates/info.html
+++ b/templates/info.html
@@ -19,7 +19,11 @@
   <dt>
     <div class="important">开始下载吧！</div>
     <div>您也可以使用Google账户登录后添加资源</div>
-    <div>帮助教程： <a href="http://blog.4321.la/2011/12/526.html">Mac</a></div>
+    <div>教程： 
+      <a href="http://blog.4321.la/2011/12/526.html">Mac</a>
+      <a href="http://blog.binux.me/2011/12/howto_download_xunlei_offline_for_linux/">Linux</a>
+      <a href="http://blog.binux.me/2011/12/how_to_download_resource_from_loli-lu/">Win</a>
+    </div>
     <div>源代码： <a href="https://github.com/binux/lixian.xunlei">GitHub</a></div>
   </dt>
 </dl>
