--- a/templates/share.html
+++ b/templates/share.html
@@ -170,11 +170,14 @@
     $("#link-text").text(str);
   }
 
+  function multiple_server_fix(url) {
+     return "'"+url.replace("gdl", "'{gdl,dl.{f,g,h,i,twin}}'")+"'";
+  }
   function aria2_links() {
     var str = "";
     var cookie = get_cookie();
     $.each(get_links(), function(i, n) {
-      str += "aria2c -c -x5 --out "+escape_command(n.title)+" --header 'Cookie:"+cookie+";' '"+n.url+"'\n";
+      str += "aria2c -c -s5 -x5 -j30 --out "+escape_command(n.title)+" --header 'Cookie:"+cookie+";' "+multiple_server_fix(n.url)+"\n";
     });
     $("#link-text").text(str);
   }
