--- a/templates/index.html
+++ b/templates/index.html
@@ -70,8 +70,9 @@
     }
   });
 
-  // get lixian url fancybox
+  // fancybox
   $(".get-lixian-url").fancybox({ width: 700 });
+  $(".edit-button").fancybox({ width: 700 , height: 250});
 
   // item hover
   $(".task-list").hover(function() {
