fix more bugs....

--- a/templates/task_list.html
+++ b/templates/task_list.html
@@ -24,6 +24,7 @@
 {% if tasks %}
 <script>
   $(".get-lixian-url").fancybox({ width: 700 });
+  $(".edit-button").fancybox({ width: 700 , height: 250});
   $(".task-item").hover(function() {
     $(this).find(".ext-info").delay(250).show(1);
   }, function() {
