--- a/templates/front.html
+++ b/templates/front.html
@@ -55,7 +55,7 @@
   }
   jQuery(document).ready(function() {
       if (document.cookie.indexOf("xss_notice=done") == -1) {
-          $.fancybox('<div style="width:450px"><p>如果您<b>一周内登录过迅雷离线</b>，可能会无法使用浏览器下载功能。</p><p>请使用隐身模式访问。</p></div>', {padding: 20});
+          $.fancybox('<div style="width:450px"><p>如果您<b>一周内登录过迅雷离线</b>，可能会无法使用浏览器下载功能。</p><p>请使用隐身浏览方式访问，或清除Cookie。</p></div>', {padding: 20});
       }
       document.cookie = "xss_notice=done";
    });
