--- a/templates/lixian.html
+++ b/templates/lixian.html
@@ -129,7 +129,7 @@
     });
     $("#link-text").text(str);
     $("#link-text").show();
-    $("#link-text").get(0).style.posHeight=$("#link-text").get(0).scrollHeight;
+    $("#link-text").get(0).style.height=$("#link-text").get(0).scrollHeight+"px"
   }
 
   function wget_links() {
@@ -141,7 +141,7 @@
     });
     $("#link-text").text(str);
     $("#link-text").show();
-    $("#link-text").get(0).style.posHeight=$("#link-text").get(0).scrollHeight;
+    $("#link-text").get(0).style.height=$("#link-text").get(0).scrollHeight+"px"
   }
 
   function multiple_server_fix(url) {
@@ -156,7 +156,7 @@
     });
     $("#link-text").text(str);
     $("#link-text").show();
-    $("#link-text").get(0).style.posHeight=$("#link-text").get(0).scrollHeight;
+    $("#link-text").get(0).style.height=$("#link-text").get(0).scrollHeight+"px"
   }
 
   var w=480;
