--- a/templates/front.html
+++ b/templates/front.html
@@ -28,9 +28,9 @@
       <li><a href="/uploader/{{ current_user['id'] }}">{{ current_user['name'] }}</a></li>
       <li><a href="/login?logout=1">登出</a></li>
       <li><a href="/add_task" class="iframe add-task">发布资源</a></li>
-      <li class="last"><a href="/add_task_anonymous" class="iframe add-task-anonymous">太麻烦了，直接获取离线地址</a></li>
+      <li class="last"><a href="/add_task_anonymous" class="iframe add-task-anonymous">获取离线地址</a></li>
       {% else %}
-      <li class="last"><a href="/login">登录</a></li>
+      <li class="last"><a href="/login">Google OpenID 登录</a></li>
       {% end %}
     </ul>
     </div>
