--- a/templates/front.html
+++ b/templates/front.html
@@ -27,6 +27,7 @@
       {% if current_user %}
       <li><a href="/uploader/{{ current_user['id'] }}">{{ current_user['name'] }}</a></li>
       <li><a href="/login?logout=1">登出</a></li>
+      {% if handler.has_permission("admin") %}<li><a href="/manager">系统管理</a></li>{% end %}
       <li><a href="/add_task" class="iframe add-task">发布资源</a></li>
       <li class="last"><a href="/add_task_anonymous" class="iframe add-task-anonymous">获取离线地址</a></li>
       {% else %}
