add blog for author

--- a/templates/author_info.html
+++ b/templates/author_info.html
@@ -1,4 +1,4 @@
 <dl id="author-info">
-    <dd>Written By</dd> <dt>+<a href="https://plus.google.com/u/0/109559563687025213768">足兆叉虫</a></dt>
-    <dd>Power By</dd> <dt>+<a href="https://plus.google.com/u/0/100204491389909955903">Martian Z</a></dt>
+    <dd>Written By</dd> <dt>+<a rel="author" href="https://plus.google.com/u/0/109559563687025213768" target="_blank">足兆叉虫</a>(<a href="http://binux.me/" target="_blank">BLOG</a>)</dt>
+    <dd>Powered By</dd> <dt>+<a href="https://plus.google.com/u/0/100204491389909955903" target="_blank">Martian Z</a>(<a href="http://4321.la/" target="_blank">BLOG</a>)</dt>
 </dl>
