--- a/templates/manager.html
+++ b/templates/manager.html
@@ -19,14 +19,19 @@ hr { margin-top: 10px; margin-bottom: 20px; }
     <dd>{{ handler.task_manager.username }} - {{ handler.task_manager._xunlei.uid }} - 
     <a href="/manager/recheck_login">{{ "已登录" if handler.task_manager.islogin else "未登录" }}</a></dd>
 
-    <dt>当前uid</dt>
-    <dd>{{ handler.task_manager.uid }}</dt>
+    {% if not handler.vip_pool.pool %}
+      <dt>当前uid</dt>
+      <dd>{{ handler.task_manager.uid }}</dt>
 
-    <dt>当前task_id</dt>
-    <dd>{{ handler.task_manager.last_task_id }}</dt>
+      <dt>当前task_id</dt>
+      <dd>{{ handler.task_manager.last_task_id }}</dt>
 
-    <dt>当前gdriveid</dt>
-    <dd>{{ handler.task_manager.gdriveid }}</dt>
+      <dt>当前gdriveid</dt>
+      <dd>{{ handler.task_manager.gdriveid }}</dt>
+    {% else %}
+      <dt>VIPool<dt>
+      <dd>size: {{ len(handler.vip_pool.pool) }}</dd>
+    {% end %}
 
     <dt>logging level</dt>
     <dd><a href="/manager/switch_level">{{ handler.logging_level }}</a></dd>
@@ -55,10 +60,8 @@ hr { margin-top: 10px; margin-bottom: 20px; }
           </dd>
       </li>
       <li>
-        <form action="/manager/set_uid" method="GET">设置uid,gdriveid,tid: <br />
-          uid: <input name="uid" type="text" value="{{ handler.task_manager.uid }}" /> <br />
-          gdriveid: <input name="gdriveid" type="text" value="{{ handler.task_manager.gdriveid }}" /> <br />
-          tid: <input name="tid" type="text" value="{{ handler.task_manager.last_task_id }}" /> <br />
+        <form action="/manager/set_vip_pool" method="GET">设置VIPool: <br />
+            <textarea name="pool" style="width: 500px;">{{ handler.vip_pool.serialize() }}</textarea> <br />
           <input type="submit" value="submit" />
         </form>
       </li>
